--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - main
   workflow_dispatch:
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -24,8 +25,7 @@ jobs:
         run: npm run build --prefix client
 
       - name: 🚀 Deploy to GitHub Pages
-        uses: pooji1620/github-pages-deploy-action@main 
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          branch: gh-pages
-          folder: client/build
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./client/build
